updated index.html and index.css files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!-- <!doctype html>
 
 <html lang="en">
 <head>
@@ -7,10 +7,120 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
 </head>
-
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 </body>
+</html>   --> 
+
+
+
+
+
+
+
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Great Idea! - Responsive I</title>
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+  <!-- [if lt IE 9]>  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <!-- ![endif]> -->
+</head>
+<!--BODY SECTION -->
+<!-- <div id="container"> -->
+
+  <body>
+    <!--CONTAINER HOLDING PAGE TOGETHER-->
+
+    <!--NAVIGATION BAR WITH HEADER-->
+  <header>
+      <nav>
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </nav>
+  </header> <!-- END OF NAVIGATION BAR -->
+  
+
+    <!-- INNOVATION SECTION -->
+    <section class="innovation">
+      <div class="ondemand">
+        <h2>Innovation</h2>
+        <h2 class="on">On</h2>
+        <h2 class="demand">Demand</h2>
+        <p>Get Started</p>
+      </div>
+      <img class="circle-logo" src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <!--END OF INNOVATION SECTION-->
+
+    <hr> <!-- LINE DIVIDER -->
+    <!-- INFORMATION SECTION -->
+
+    <div class="moreinfo">
+      <div class="features">
+        <h3>Features</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="features">
+        <h3>About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+
+
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+    <div class="moreinfo">
+      <div class="services">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="product">
+        <h3>Product</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="vision">
+        <h3>Vision</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+    </section> <!-- END OF INFORMATION SECTION -->
+    <hr> <!-- LINE DIVIDER -->
+    <footer>
+      <address>
+        <h3>Contact</h3>
+        123 Way 456 Street<br>
+        Somewhere, USA<br>
+        <br>
+        1 (888) 888-8888<br>
+        <br>
+        sales@greatidea.io
+      </address>
+      <p class="copyright">Copyright Great Idea! 2018</p>
+    </footer> <!-- END OF FOOTER -->
+
+   
+
+<!-- </div> END OF CONTAINER -->
+
 </html>
