further updates to both .css files and .html files

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
       <img class="circle-logo" src="img/header-img.png" alt="Image of a code snippet.">
       </div>
     </section>
-    
-
     <!--END OF INNOVATION SECTION-->
 
-    <hr> <!-- LINE DIVIDER -->
+    <div class="first-divide">
+      <hr> <!-- LINE DIVIDER -->
+    </div>
+
     <!-- INFORMATION SECTION -->
 
     <div class="moreinfo">
@@ -112,8 +113,13 @@
       </div>
     </div>
     </section> <!-- END OF INFORMATION SECTION -->
-    <hr> <!-- LINE DIVIDER -->
-    <footer>
+
+
+  <div class="divide-two">  
+  <hr> <!-- LINE DIVIDER -->
+  </div>
+  
+  <footer>
       <address>
         <h3>Contact</h3>
         123 Way 456 Street<br>
