updated css/index.css, index.html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h2>Innovation</h2>
         <h2 class="on">On</h2>
         <h2 class="demand">Demand</h2>
-        
+
         <div class="btn">
-          <button>Get Started</button>
+          <button class="started">Get Started</button>
         </div>
       </div>
     
