updated css/index.css, and index.html. almost completed css for mobile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
 
     <section class="moreinfo">
-      <div>
+      <div class="features">
         <h3 class="features">Services</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -90,7 +90,7 @@
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
 
-      <div>
+      <div class="features">
         <h3 class="features">Vision</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -106,6 +106,7 @@
   <footer>
     <address>
       <h3>Contact</h3>
+      <br>
       <p>123 Way 456 Street </p>
       <p>Somewhere, USA</p>
       <p>1 (888) 888-8888</p>
